# zaoc-fastapi

./: .env.example  Makefile  README.md  main.py  pyproject.toml
app/: errors.py  main.py  settings.py
app/api/: router.py
app/domain/: consumer_state.py  tick.py
app/dto/: tick.py
app/infra/: cache.py  handlers.py  mq.py  mq_consumer.py
app/mapping/: tick.py
app/middleware/: request_id.py
app/v1/: latest.py  tick.py
