[project]
name = "zaoc-fastapi"
version = "0.1.0"
description = "Real-time pipeline API (FastAPI) with ZAOC-Py v2"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "orjson>=3.10.3",
  "anyio>=4.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  # 실시간 테마 확장(추후 Step에서 활용)
  "aiokafka>=0.11.0",
  "redis>=5.0.7",
  "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.7",
  "pyright>=1.1.379",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "hypothesis>=6.112.0",
  "pytest-benchmark>=4.0.0",
  "schemathesis>=3.27.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B","C4","SIM"]
lint.ignore = ["E501"]  # 라인 길이는 별도 관리

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
include = ["app", "tests"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
